@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 23-01-2006 added: Karaoke to left and right rather than just center, thanks to erpi99.
  - 22-01-2006 added: Ability to set default settings for all movies from the video OSD.
  - 22-01-2006 changed: Removed some unused/rarely used settings.
  - 21-01-2006 added: xored trainer engine! thanks to team xored and to britneyspair for skinwork!
